# cliary

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
cliary/: cli.py  core.py
logs/: 2026-04-22.txt
