[project]
name = "cliary"
version = "0.1.2"
description = "A minimal CLI journal with typing effect"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "rich>=15.0.0",
]

[tool.setuptools.packages.find]
include = ["cliary*"]
exclude = ["logs*"]

[project.scripts]
cliary = "cliary.cli:main"

[project.urls]
Homepage = "https://github.com/vikasAWA/cliary"
Repository = "https://github.com/viaksAWA/cliary"
